# vision

./: .bazelrc  .gitignore  MODULE.bazel  README.md  bazel-bin  bazel-out  bazel-testlogs  bazel-vision  go.mod  go.sum
.scion/: settings.yaml
com.tm.vision/: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  Dockerfile.claude-agent  PLAN.md  SETUP.md  requirements.txt
com.tm.vision/agent/agents/: ollama-planner.yaml  ollama-reviewer.yaml
com.tm.vision/agent/api/: main.py
com.tm.vision/agent/pipeline/: config.py  graph.py  state.py
com.tm.vision/agent/pipeline/nodes/: git_ops.py  implementer.py  planner.py  reviewer.py
com.tm.vision/api/: main.py
com.tm.vision/app/projects/: mark1.yaml
com.tm.vision/app/server/: main.py
com.tm.vision/docker/ollama-agent/: Dockerfile  planner.py  reviewer.py
com.tm.vision/phases/: phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md
com.tm.vision/pipeline/: graph.py
com.tm.vision/pipeline/nodes/: implementer.py  planner.py
com.tm.vision/services/hbase-client/: BUILD.bazel  README.md  client.go  config.go
